Initialize page layoput

--- a/index.html
+++ b/index.html
@@ -5,5 +5,21 @@
     <title>Apple</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="hero-div">
+      <div class="nav"></div>
+      <div class="hero-text-container">
+        <h1>What will your verse be?</h1>
+        <h2>
+          Everyone has something to share. See how people are using iPad in
+          their unique ways to add to the world’s story.
+        </h2>
+        <h3>Watch the “Your Verse” film and explore the stories</h3>
+      </div>
+    </div>
+    <div class="products-flex">Howdy</div>
+    <footer>
+      <div class="footer-container">Doody</div>
+    </footer>
+  </body>
 </html>
