Add flexbox layout to footer and products nav

--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
         <h3>Watch the “Your Verse” film and explore the stories</h3>
       </div>
     </div>
-    <div class="products-flex">Howdy</div>
+    <div class="products-flex">
+      <div class="product-item">Banana</div>
+      <div class="product-item">Banana</div>
+      <div class="product-item">Banana</div>
+      <div class="product-item">Banana</div>
+    </div>
     <footer>
-      <div class="footer-container">Doody</div>
+      <div class="footer-container">
+        <div class="left">Left</div>
+        <div class="right">Right</div>
+      </div>
     </footer>
   </body>
 </html>
