--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
   </head>
   <body>
     <div class="hero-div">
-      <div class="nav"></div>
+      <ul class="nav">
+        <li class="nav-item">Logo</li>
+        <li class="nav-item">Logo</li>
+        <li class="nav-item">Logo</li>
+        <li class="nav-item">Logo</li>
+        <li class="nav-item">Logo</li>
+        <li class="nav-item">Logo</li>
+        <li class="nav-item">Logo</li>
+        <li class="nav-item">Logo</li>
+        <li class="nav-item">Logo</li>
+        <li class="nav-item">Logo</li>
+      </ul>
       <div class="hero-text-container">
         <h1>What will your verse be?</h1>
         <h2>
