Set up basic footer text spacing

--- a/index.html
+++ b/index.html
@@ -36,8 +36,17 @@
     </div>
     <footer>
       <div class="footer-container">
-        <div class="left">Left</div>
-        <div class="right">Right</div>
+        <div class="left">
+          <ul class="footer-list">
+            <li>Copy copy copy</li>
+            <li>copy copy copy</li>
+          </ul>
+        </div>
+        <div class="right">
+          <ul class="footer-list">
+            <li>copy copy copy</li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
