refactor nav to include a's. Add border to li.

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   <body>
     <div class="hero-div">
       <ul class="nav">
-        <li class="nav-item">Logo</li>
-        <li class="nav-item">Logo</li>
-        <li class="nav-item">Logo</li>
-        <li class="nav-item">Logo</li>
-        <li class="nav-item">Logo</li>
-        <li class="nav-item">Logo</li>
-        <li class="nav-item">Logo</li>
-        <li class="nav-item">Logo</li>
-        <li class="nav-item">Logo</li>
-        <li class="nav-item">Logo</li>
+        <li class="nav-item"><a href="#">Logo</a></li>
+        <li class="nav-item"><a href="#">Logo</a></li>
+        <li class="nav-item"><a href="#">Logo</a></li>
+        <li class="nav-item"><a href="#">Logo</a></li>
+        <li class="nav-item"><a href="#">Logo</a></li>
+        <li class="nav-item"><a href="#">Logo</a></li>
+        <li class="nav-item"><a href="#">Logo</a></li>
+        <li class="nav-item"><a href="#">Logo</a></li>
+        <li class="nav-item"><a href="#">Logo</a></li>
+        <li class="nav-item"><a href="#">Logo</a></li>
       </ul>
       <div class="hero-text-container">
         <h1>What will your verse be?</h1>
