Add background images to promotional section

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       </div>
     </div>
     <div class="products-flex">
-      <div class="product-item">Banana</div>
-      <div class="product-item">Banana</div>
-      <div class="product-item">Banana</div>
-      <div class="product-item">Banana</div>
+      <div class="product-item" id="pane1"></div>
+      <div class="product-item" id="pane2"></div>
+      <div class="product-item" id="pane3"></div>
+      <div class="product-item" id="pane4"></div>
     </div>
     <footer>
       <div class="footer-container">
